# Pydantic-Crash-Course-Data-Validation-in-Python

./: 1_Pydantic_why.py  2_field_validator.py  4_computed_field.py  5_nasted_models.py  README.md  UPDATE_SUMMARY.md  pyproject.toml  requirements.txt
examples/: 01_basic_models.py  02_data_types.py
exercises/: exercise_01_user_profile.py
exercises/solutions/: solution_01_user_profile.py
real_world/: fastapi_example.py
tests/: test_basic_models.py
